# credit-risk-study-case

./: .gitignore  Makefile  README  README.md  pyproject.toml  requirements.txt
credit-risk/: _config.yml  _toc.yml  intro.md
credit-risk/decision-api/: overview.md  tiered-risk-model.md
credit-risk/discovery/: _loans-data-column-descriptions.md  data-leak.md  data-profile-reports.md  evaluation.md  hypothesis.md  initial-data-discovery.md  methodology.md  product-understanding.md  remarks-about-data.md
credit-risk/discovery/data-profile-reports/: ecommerce-profile.html
credit-risk/experiments/: results.md  test-assumption.md  test-hypothesis.md
credit-risk/exploratory-analysis/: anecdotes.md  anecdotes.py  results.py  sample-analysis.py
credit-risk/feature-engineering/: automatic-feature-engineering.py  feature-engineering.md  feature-selection.py  featuretools.md  notebooks.py
credit-risk/model-experiments/: automatic-feature-engineering.py  baseline-performance.md  baseline-performance.py  feature-selection.py  fit-baseline.py  holdout-split-featureframe.py  hyperparam-tuning.md  hyperparam-tuning.py  risk-assessment-performance.md  tuned-model-performance.py
docs/: .buildinfo  risk-assessment-decisions.csv  searchindex.js
docs/.doctrees/: environment.pickle  intro.doctree
docs/.jupyter_cache/: global.db
docs/decision-api/: overview.html
docs/discovery/: methodology.html
docs/html/: .buildinfo  genindex.html  intro.html  objects.inv  search.html  searchindex.js
docs/model-experiments/: baseline-performance.html  hyperparam-tuning.html
(+77 files in other folders)
